iphone6s에서 sweetmessage 삭제버튼 잘려보이는 현상 수정

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -172,6 +172,10 @@
     padding-right: 0;
   }
 
+  #sweetMessageList .item__wrap_delete {
+    width: 60px;
+  }
+
   /* SweetMessage Write */
   #sweetMessageWrite {
     padding-left: 1rem;
